--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "parcel-bundler": "^1.12.4"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   }
